Add Inquiry feature
- Add inquiry table
- design Car Listing Page
- Add APi for Inquiry
- add feature for user and admin like user can view details and inquire and admin can view total inquiries

--- a/Views/Auth/Login.cshtml
+++ b/Views/Auth/Login.cshtml
@@ -11,9 +11,9 @@
         <label for="Password">Password</label>
         <input type="password" class="form-control" id="Password" name="Password" required />
     </div>
-    <div class="form-group">
+    @* <div class="form-group">
         <label for="RememberMe">Remember Me</label>
         <input type="checkbox" id="RememberMe" name="RememberMe" />
-    </div>
+    </div> *@
     <button type="submit" class="btn btn-primary">Login</button>
 </form>
